--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
     "react": "^18.2.0",
